cmake_minimum_required(VERSION 3.6)
project(HLM2ProcedureMapGenerator)

find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp common.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/Assets/Object.cpp MapEditor/Assets/Object.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/Assets/ObjectManager.cpp MapEditor/Assets/ObjectManager.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/Assets/Sprite.cpp MapEditor/Assets/Sprite.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/GUI/moc_mainwindow.cpp MapEditor/GUI/moc_qstringitemmodel.cpp)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/GUI/mainwindow.cpp MapEditor/GUI/mainwindow.h MapEditor/GUI/ui_mainwindow.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/GUI/qstringitemmodel.cpp MapEditor/GUI/qstringitemmodel.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/LevelDescriptors/LevelMetaInformation.cpp MapEditor/LevelDescriptors/LevelMetaInformation.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/LevelDescriptors/TileMap.cpp MapEditor/LevelDescriptors/TileMap.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/LevelDescriptors/WallMap.cpp MapEditor/LevelDescriptors/WallMap.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/LevelDescriptors/ObjectMap.cpp MapEditor/LevelDescriptors/ObjectMap.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/Assets/Atlas.cpp MapEditor/Assets/Atlas.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/LevelDescriptors/PlayMap.cpp MapEditor/LevelDescriptors/PlayMap.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/Assets/Wall.cpp MapEditor/Assets/Wall.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/Assets/Tile.cpp MapEditor/Assets/Tile.h)
set(SOURCE_FILES ${SOURCE_FILES} MapEditor/LevelDescriptors/Level.cpp MapEditor/LevelDescriptors/Level.h)
set(SOURCE_FILES ${SOURCE_FILES} Generator/Geometry/Geometry.cpp Generator/Geometry/Geometry.h)
set(SOURCE_FILES ${SOURCE_FILES} Generator/BSP/BSP.cpp Generator/BSP/BSP.h)
set(SOURCE_FILES ${SOURCE_FILES} Generator/Interior/Room.cpp Generator/Interior/Room.h)
set(SOURCE_FILES ${SOURCE_FILES} Generator/Interior/Building.cpp Generator/Interior/Building.h)
set(SOURCE_FILES ${SOURCE_FILES} Generator/AssetConfigurations/AssetConfigurations.h)

add_executable(HLM2ProcedureMapGenerator ${SOURCE_FILES})

qt5_use_modules(HLM2ProcedureMapGenerator Core Widgets Gui)